--- a/style.css
+++ b/style.css
@@ -38,7 +38,13 @@ body {
     width: 90%;
     max-width: 400px;
     text-align: center;
-    margin: 10vh auto;
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    max-height: 80vh;
+    overflow: hidden; 
 }
 
 h2 {
@@ -75,7 +81,7 @@ button:hover {
 ul {
     list-style: none;
     margin-top: 15px;
-    max-height: 300px;
+    max-height: 250px;
     overflow-y: auto;
     padding: 0;
 }
