--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ body {
     align-items: center;
     height: 80vh;
 }
+.footer {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #555;
+    text-align: center;
+    padding-top: 10px;
+    border-top: 1px solid #ddd;
+}
 
 .container {
     background: white;
