style: update footer

--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ body {
     height: 80vh;
 }
 .footer {
-    margin-top: 15px;
-    font-size: 14px;
-    color: #555;
+    margin-top: 20px;
+    font-size: 11px;
+    color: rgba(0, 0, 0, 0.651);
     text-align: center;
     padding-top: 10px;
     border-top: 1px solid #ddd;
