--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    width: 100%;
+    height: 100vh;
 }
 .footer {
     margin-top: 20px;
